# security_selinux_adapter

./: .gitignore  1620.diff  1620.diff:Zone.Identifier  AGENTS.md  BUILD.gn  CODEOWNERS  OAT.xml  README-en.md  README.md  bundle.json  copy_file_or_dir.sh  hisysevent.yaml  my.cli  new.diff  selinux.gni
.gitee/: PULL_REQUEST_TEMPLATE.zh-CN.md
config/: config.enforce
framework/policycoreutils/include/: restore_task.h  seharmony_cjson.h
framework/policycoreutils/src/: contexts_trie.c  hap_restorecon.cpp  load_policy.cpp  param_checker.c  restore_task.cpp  sehap_contexts_trie.cpp  seharmony_cjson.cpp  seharmony_hisysevent_adapter.cpp  selinux_klog.c  selinux_log.c  selinux_map.c  selinux_parameter.c  selinux_restorecon.c  selinux_share_mem.c  service_checker.cpp
framework/tools/hap_restorecon/: test.cpp
framework/tools/param_check/: test.cpp
interfaces/policycoreutils/include/: contexts_trie.h  hap_restorecon.h  hdf_service_checker.h  param_checker.h  paraperm_checker.h  policycoreutils.h  sehap_contexts_trie.h  seharmony_hisysevent_adapter.h  selinux_error.h  selinux_klog.h  selinux_log.h  selinux_map.h  selinux_parameter.h  selinux_share_mem.h  service_checker.h
interfaces/policycoreutils/src/: contexts_trie.c  contexts_trie.cpp  hap_restorecon.cpp  load_policy.c  load_policy.cpp  param_checker.c  paraperm_checker.cpp  restorecon.c  sehap_contexts_trie.cpp  selinux_error.cpp  selinux_klog.c  selinux_log.c  selinux_map.c  selinux_parameter.c  selinux_restorecon.c  selinux_share_mem.c  service_checker.cpp
interfaces/tools/hap_restorecon/: test.cpp
interfaces/tools/load_policy/: load_policy.c
interfaces/tools/param_check/: test.cpp
interfaces/tools/service_check/: test.cpp
scripts/: build_contexts.py  build_flex_check.py  build_ignore_cfg.py  build_policy.py  build_policy_api.py  enforce_selinux.sh  find.py
scripts/selinux_check/: check_baseline.py  check_common.py  check_common_type.py  check_consistency_of_tcontext.py  check_context_length.py  check_data_regex.py  check_domain.py  check_file_contexts_typeattr.py  check_ioctl_xperm.py  check_parameter.py  check_partition_label_use.py  check_perm_group.py  check_permissive.py  check_socket.py  check_virtfs_access.py  cil_parser.py  selinux_check_main.py  te_scanner.py
scripts/selinux_check/config/: baseline.json  cosistency_pair.json  glb_def.txt  partition_label.txt  perm_group.json  restricted_type.json  selinux_check.json
scripts/selinux_check/config/flex/: file_contexts_typeattr_config.json  sub_typeattr_check.json  type_group.json  virtfs_rules.json
scripts/selinux_check/whitelist/: partition_label_use_whitelist.txt  perm_group_whitelist.json
sepolicy/: AGENTS.md  hdf_service_contexts  sehap_contexts  service_contexts
sepolicy/base/public/: appspawn.te  attributes  attributes_for_hap  chipset_domain.te  device.te  domain.te  file.te  filesystem.te  foundation.te  glb_never_def.spt  glb_perm_def.spt  glb_scontext.te  glb_te_def.spt  hap_domain.te  hdcd.te  hdf_service.te  hdf_service_contexts  hdfdomain.te  hilogd.te  init.te  installs.te  kernel.te  normal_hap.te  parameter.te  parameter_contexts  sadomain.te  sehap_contexts  service.te  service_contexts  shell.te  system_basic_hap.te  system_core_hap.te  system_domain.te  test.te  type.te  ueventd.te
sepolicy/base/rk3568/: accessibility.te  accountmgr.te  appspawn.te  audio_policy.te  bluetooth_service.te  camera_service.te  distributeddata.te  faultloggerd.te  filesystem.te  foundation.te  hdcd.te  hdf_devmgr.te  hiview.te  inputmethod_service.te  media_service.te  memmgrservice.te  normal_hap_domain.te  param_watcher.te  platform_hap_domain.te  priv_hap_domain.te  render_service.te  samgr.te  useriam.te  wifi_manager_service.te
sepolicy/base/system/: access_vectors  appspawn.te  basetype.te  faultloggerd.te  file.te  file_contexts  fs_use  glb_roles.spt  hiview.te  initial_sid_contexts  initial_sids  mls  policy_cap  security_classes  system_domain.te  system_domain.te.orig  system_domain.te.rej  users  virtfs_contexts
sepolicy/base/te/: a2dp_host.te  accessibility.te  accesstoken_service.te  accountmgr.te  aimgr.te  allocator_host.te  appspawn.te  audio_hdi_server_host.te  audio_policy.te  audio_server.te  battery_stats.te  bgtaskmgr_service.te  blue_host.te  bluetooth_service.te  bootanimation.te  camera_host.te  camera_service.te  codec_host.te  composer_host.te  console.te  d-bms.te  dcamera.te  dcamera_host.te  debug_hap.te  device_usage_stats_service.te  deviceauth_service.te  deviceinfoservice.te  dhardware.te  disp_gralloc_host.te  distributeddata.te  distributedfiledaemon.te  distributedsche.te  download_server.te  drm_service.te  dscreen.te  dslm_service.te  edm_sa.te  face_auth_host.te  faceauth.te  faultloggerd.te  (+69 more)
sepolicy/min/: access_vectors  glb_roles.spt  initial_sid_contexts  initial_sids  min.te  mls  security_classes  users
sepolicy/ohos_policy/bootanimation/public/: type.te
sepolicy/ohos_policy/bootanimation/system/: init.te  (+5 more)
sepolicy/ohos_policy/request/: download_server.te
sepolicy/whitelist/: context_length_whitelist.json  hdcd.baseline  ioctl_xperm_whitelist.json  partition_label_use_whitelist.txt  perm_group_whitelist.json  permissive_whitelist.json  restricted_common_type_whitelist.txt  sh.baseline
sepolicy/whitelist/flex/: context_length_whitelist.json  domain_baseline.json  domain_whitelist.json  domian_whitelist.json  file_contexts_typeattr_whitelist.json  parameter_baseline.json  parameter_whitelist.json  socket_whitelist.json  virtfs_whitelist.json
test/: BUILD.gn  selinux_test.c
test/unittest/common/: test_common.cpp  test_common.h
test/unittest/hap_restorecon/: hapfile_test.cpp  hapfile_test.h  unit_test.cpp  unit_test.h
test/unittest/parameter_static/: unit_test.cpp  unit_test.h
test/unittest/paraperm_checker/: unit_test.cpp  unit_test.h
test/unittest/seharmony_cjson/: unit_test.cpp  unit_test.h
test/unittest/selinux_common_test/: unit_test.cpp  unit_test.h
test/unittest/service_checker/: unit_test.cpp  unit_test.h
test/unittest/src/: selinux_unit_test.cpp  selinux_unit_test.h
(+1821 files in other folders)
