# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

BUILD_CONFIG_DIR = "//build/config"
THIRD_PARTY_DIR = "//third_party"

declare_args() {
  selinux_build_path = "default"
  components = "default"
  vendor_policy_version = "40"
  special_build_policy_script = "default"
  special_build_contexts_script = "default"
  special_build_ignore_cfg = "default"
  special_selinux_check_config = "default"
  extra_args = "default"
  contexts_extra_args = "default"
  support_developer_mode = false
  special_build_selinux_gni_path = ""
  selinux_check_extend_list = "default"
}

declare_args() {
  selinux_enforce = true
}
